--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Application with front end using vue",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
   "author": "JD",
   "license": "MIT",
